# NEWPBot2

./: .gitignore  CMakeLists.txt  README.md  bgsStarSystem.h  cmdrClass.h  effortdata.js  eslint.config.js  main  main.cpp  monthlyLeaderboard.h  package-lock.json  package.json
MyBot/: MyBot.vcxproj  MyBot.vcxproj.filters  bgsStarSystem.h  cmdrClass.cpp  cmdrClass.h  main.cpp  monthlyLeaderboard.h  powerplayStarSystem.h
MyBot/x64/Debug/: NewpBot.ilk  vc145.idb
MyBot/x64/Debug/NewpBot.tlog/: CL.read.1.tlog  CL.write.1.tlog  NewpBot.lastbuildstate  link.read.1.tlog
cmake/: FindDPP.cmake
commands/utility/: CreateNewUser.js  addsystem.js  contirbutionremoval.js  contribute.js  contribution-manager.js  createnewuser.js  displayeffortboard.js  removesystem.js
src/: cmdrClass.cpp  cmdrClass.h  main.cpp  powerplayStarSystem.h
